--- a/css/style.css
+++ b/css/style.css
@@ -1028,3 +1028,48 @@ fieldset {
 .hidden {
   display: none;
 }
+
+/* validate-form */
+
+.has-danger input:required:invalid,
+.has-danger select  {
+  border-color: red;
+}
+
+.ad-form__element {
+  position: relative;
+}
+
+.pristine-error {
+  position: absolute;
+  z-index: 999;
+  bottom: calc(42px + 10px);
+  right: 20px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 150px;
+  min-height: 22px;
+  padding: 5px 10px;
+
+  text-align: center;
+  color: #fff;
+
+  background: #ff6547;
+  border-radius: 4px;
+}
+
+.pristine-error::before {
+  content: "";
+
+  position: absolute;
+  bottom: -5px;
+  left: 50%;
+  transform: translateX(-50%);
+
+  width: 10px;
+  height: 5px;
+
+  background-image: url("data:image/svg+xml,%3Csvg width='10' height='5' viewBox='0 0 10 5' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon class='st0' points='5,5 0,0 10,0' fill='%23FF6547'/%3E%3C/svg%3E%0A");
+}
