--- a/css/style.css
+++ b/css/style.css
@@ -1036,6 +1036,10 @@ fieldset {
   border-color: red;
 }
 
+input[readonly] {
+  color: rgb(117, 117, 117);
+}
+
 .ad-form__element {
   position: relative;
 }
@@ -1043,14 +1047,15 @@ fieldset {
 .pristine-error {
   position: absolute;
   z-index: 999;
-  bottom: calc(42px + 10px);
-  right: 20px;
+  bottom: calc(42px + 7px);
+  right: calc(50% + 10px);
+  transform: translateX(50%);
 
   display: flex;
   justify-content: center;
   align-items: center;
-  min-width: 150px;
-  min-height: 22px;
+  min-width: 170px;
+  min-height: 26px;
   padding: 5px 10px;
 
   text-align: center;
