--- a/css/style.css
+++ b/css/style.css
@@ -407,6 +407,31 @@ fieldset {
   margin-right: 14px;
 }
 
+.ad-form__slider.noUi-target:not(#fake-id) {
+  width: calc(100% - 20px);
+  height: 5px;
+  transform: translateY(-2px);
+}
+
+.ad-form__slider:not(#fake-id) .noUi-connect {
+  background-color: #353535;
+}
+
+.ad-form__slider:not(#fake-id) .noUi-handle {
+  border-radius: 50%;
+  width: 12px;
+  height: 12px;
+  right: -5px;
+  top: -5px;
+  cursor: grab;
+  background-color: #999999;
+}
+
+.ad-form__slider:not(#fake-id) .noUi-handle::after,
+.ad-form__slider:not(#fake-id) .noUi-handle::before {
+  display: none;
+}
+
 .features legend {
   padding-bottom: 5px;
 }
@@ -1027,54 +1052,4 @@ fieldset {
 
 .hidden {
   display: none;
-}
-
-/* validate-form */
-
-.has-danger input:required:invalid,
-.has-danger select  {
-  border-color: red;
-}
-
-input[readonly] {
-  color: rgb(117, 117, 117);
-}
-
-.ad-form__element {
-  position: relative;
-}
-
-.pristine-error {
-  position: absolute;
-  z-index: 999;
-  bottom: calc(42px + 7px);
-  right: calc(50% + 10px);
-  transform: translateX(50%);
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-width: 170px;
-  min-height: 26px;
-  padding: 5px 10px;
-
-  text-align: center;
-  color: #fff;
-
-  background: #ff6547;
-  border-radius: 4px;
-}
-
-.pristine-error::before {
-  content: "";
-
-  position: absolute;
-  bottom: -5px;
-  left: 50%;
-  transform: translateX(-50%);
-
-  width: 10px;
-  height: 5px;
-
-  background-image: url("data:image/svg+xml,%3Csvg width='10' height='5' viewBox='0 0 10 5' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon class='st0' points='5,5 0,0 10,0' fill='%23FF6547'/%3E%3C/svg%3E%0A");
 }
