--- a/css/style.css
+++ b/css/style.css
@@ -1053,3 +1053,178 @@ fieldset {
 .hidden {
   display: none;
 }
+
+/* validate-form */
+
+.has-danger input:required:invalid,
+.has-danger select  {
+  border-color: red;
+}
+
+input[readonly] {
+  color: rgb(117, 117, 117);
+}
+
+.ad-form__element {
+  position: relative;
+}
+
+.pristine-error {
+  position: absolute;
+  z-index: 999;
+  bottom: calc(42px + 7px);
+  right: calc(50% + 10px);
+  transform: translateX(50%);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 140px;
+  min-height: 26px;
+  padding: 3px 10px;
+
+  font-size: 13px;
+  text-align: center;
+  color: #fff;
+
+  background: #ff6547;
+  border-radius: 4px;
+}
+
+.pristine-error::before {
+  content: "";
+
+  position: absolute;
+  bottom: -4px;
+  left: 50%;
+  transform: translateX(-50%);
+
+  width: 10px;
+  height: 5px;
+
+  background-image: url("data:image/svg+xml,%3Csvg width='10' height='5' viewBox='0 0 10 5' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon class='st0' points='5,5 0,0 10,0' fill='%23FF6547'/%3E%3C/svg%3E%0A");
+}
+
+.ad-form__slider {
+  position: absolute;
+  bottom: -6px;
+}
+
+/* popup */
+
+.leaflet-popup-content-wrapper {
+  border-radius: 6px;
+}
+
+.leaflet-popup-tip-container {
+  display: none;
+}
+
+.leaflet-popup-content {
+  margin: 0;
+  padding: 15px;
+}
+
+.popup {
+  display: grid;
+  grid-template-columns: 35px 1fr;
+  column-gap: 15px;
+  width: 230px;
+}
+
+.popup__avatar {
+  width: 35px;
+  height: 35px;
+
+  border-radius: 50%;
+}
+
+.popup__title,
+.popup__text--address,
+.popup__text--price {
+  grid-column: 2 / -1;
+}
+
+.popup__type,
+.popup__text--capacity,
+.popup__text--time,
+.popup__features,
+.popup__description,
+.popup__photos {
+  grid-column: 1 / -1;
+}
+
+.popup__title {
+  margin-bottom: 6px;
+
+  font-size: 15px;
+}
+
+.popup__text--address {
+  justify-self: flex-start;
+  margin-bottom: 8px !important;
+  padding: 0 4px;
+
+  font-size: 10px;
+
+  background-color: #dadada;
+  border-radius: 10px;
+}
+
+.popup__text--price {
+  justify-self: flex-start;
+  margin-bottom: 6px !important;
+
+  font-size: 18px;
+}
+
+.popup__type {
+  display: flex;
+  align-self: baseline;
+  margin-bottom: 3px !important;
+
+  font-size: 14px;
+}
+
+.popup__type:after {
+  content: '';
+
+  display: block;
+  align-self: center;
+  width: 100%;
+  height: 1px;
+  margin-left: 7px;
+
+  font-weight: normal;
+
+  background-color: #dadada;
+}
+
+.popup__text--capacity {
+  margin-bottom: 3px !important;
+}
+
+.popup__text--time {
+  margin-bottom: 8px !important;
+}
+
+.popup__features {
+  margin: 0;
+  margin-bottom: 3px;
+}
+
+.popup__description {
+  margin: 0 !important;
+  margin-bottom: 10px !important;
+}
+
+.popup__photo {
+  border-radius: 3px;
+}
+
+.popup__photo:hover {
+  border: none;
+  outline: 3px solid #ff5635;
+  outline-offset: -3px;
+  cursor: pointer;
+}
